# DaftCitadel

./: .eslintrc.cjs  .gitignore  AGENTS.md  Dockerfile  README.md  TEST_SUMMARY.md  agents.config.json  daft_apex_allinone.sh  daft_apex_citadel.sh  daft_citadel_v6_5.sh  docker-compose.audio.yml  docker-compose.yml  package-lock.json  package.json  react-native.config.js  tsconfig.json
__mocks__/: react-native-reanimated.ts  react-native-webrtc.ts  react-native.ts
__mocks__/@react-native-async-storage/: async-storage.ts
__mocks__/@shopify/: react-native-skia.ts
assets/python/: citadel_gui.py  daft_midi_trainer.py  daft_midi_trainer_stub.py
assets/templates/: around_world.ardour  da_funk.ardour  daft_apex.ardour
assets/theme/: style.qss
audio-engine/: CMakeLists.txt
audio-engine/include/audio_engine/: AudioBuffer.h  Automation.h  Clock.h  DSPNode.h  PluginHost.h  PluginNode.h  SceneGraph.h  Scheduler.h
audio-engine/platform/android/: AudioEngineBridge.cpp  AudioEngineBridge.h
audio-engine/platform/common/: NodeFactory.cpp  NodeFactory.h
audio-engine/platform/ios/: AudioEngineBridge.hpp  AudioEngineBridge.mm
audio-engine/src/: AudioBuffer.cpp  Automation.cpp  Clock.cpp  DSPNode.cpp  PluginHost.cpp  PluginNode.cpp  SceneGraph.cpp  Scheduler.cpp
audio-engine/tests/: ClipPlayerNodeTests.cpp  PluginNodeTests.cpp  SchedulerTests.cpp  TestMain.cpp
docs/: AGENTS.md  audio-engine.md  collaboration-performance.md  gui-phase-roadmap.md  phase-0-audit.md  plugin-hosting.md  session-management.md  ui-architecture.md
native/audio/android/src/main/jni/: AudioEngineModule.cpp  CMakeLists.txt
native/audio/ios/: AudioEngineModule.h  AudioEngineModule.mm
native/collab/: CollabNetworkDiagnostics.podspec
native/collab/android/: build.gradle  consumer-rules.pro
native/collab/ios/: CollabNetworkDiagnostics.swift  CollabNetworkDiagnosticsBridge.m
scripts/: daftcitadel.sh  manageAgents.js  rvictl-capture.sh
src/: AGENTS.md
src/audio/: AGENTS.md  AudioEngine.ts  Automation.ts  NativeAudioEngine.ts  SessionAudioBridge.ts  index.ts
src/services/: AGENTS.md
src/session/: AGENTS.md  cloud.ts  history.ts  index.ts  models.ts  serialization.ts  sessionManager.ts  util.ts
src/types/: AGENTS.md
src/ui/: AGENTS.md  index.ts
(+98 files in other folders)
